bindings/c/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes returned by Proven operations.
 *
 * Zero indicates success; negative values indicate specific error conditions.
 */
typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
/* ============================================================================
 * Core Result Types
 * ============================================================================ */

/** @brief Result for integer operations */
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/* ============================================================================
 * Memory Management (1 function)
 * ============================================================================ */

/**
 * @brief Free a string allocated by Proven functions.
 * @param ptr String to free (may be NULL).
 */
void proven_free_string(char* ptr);
/* ============================================================================
 * Lifecycle (3 functions)
 * ============================================================================ */

/**
 * @brief Initialize the Proven runtime (includes Idris 2 runtime).
 * @return PROVEN_OK on success, error code otherwise.
 *
 * Must be called before any other Proven function. Safe to call multiple times.
 */
int32_t proven_init(void);
/**
 * @brief Cleanup the Proven runtime.
 *
 * Call when done using Proven functions. All allocated resources should be
 * freed before calling this.
 */
void proven_deinit(void);
/**
 * @brief Check if the runtime is initialized.
 * @return true if initialized.
 */
bool proven_is_initialized(void);
/* ============================================================================
 * Version Information (4 functions)
 * ============================================================================ */

/** @brief Get FFI ABI version for compatibility checking. */
uint32_t proven_ffi_abi_version(void);
/** @brief Get major version number. */
uint32_t proven_version_major(void);
/** @brief Get minor version number. */
uint32_t proven_version_minor(void);
/** @brief Get patch version number. */
uint32_t proven_version_patch(void);
/** @brief Get total module count. */
uint32_t proven_module_count(void);
/* ============================================================================
 * SafeMath - Arithmetic that cannot crash (9 functions)
 * ============================================================================ */

/**
 * @brief Safe integer division.
 * @param numerator Dividend.
 * @param denominator Divisor.
 * @return Result with quotient; PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0,
 *         PROVEN_ERR_OVERFLOW for INT64_MIN / -1.
 */
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
/**
 * @brief Safe modulo operation.
 * @return Result with remainder; PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0.
 */
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
/**
 * @brief Checked addition with overflow detection.
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
/**
 * @brief Checked subtraction with underflow detection.
 * @return PROVEN_ERR_UNDERFLOW if result would underflow int64_t.
 */
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
/**
 * @brief Checked multiplication with overflow detection.
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
/**
 * @brief Safe absolute value.
 * @return PROVEN_ERR_OVERFLOW for INT64_MIN (cannot be represented as positive).
 */
ProvenIntResult proven_math_abs_safe(int64_t n);
/**
 * @brief Clamp value to [lo, hi] range.
 * @param lo Lower bound (inclusive).
 * @param hi Upper bound (inclusive).
 * @param value Value to clamp.
 * @return Clamped value.
 */
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
/**
 * @brief Integer exponentiation with overflow checking.
 * @param base Base value.
 * @param exp Exponent (must be non-negative).
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
/* ============================================================================
 * SafeString - Text operations that handle encoding safely (4 functions)
 * ============================================================================ */

/**
 * @brief Check if bytes are valid UTF-8.
 * @param ptr Pointer to byte data.
 * @param len Length of data.
 * @return Result with validation status.
 */
ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
/**
 * @brief Escape string for SQL (single quotes).
 * @note Prefer parameterized queries over string escaping.
 * @return Result with escaped string (caller must free).
 */
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
/**
 * @brief Escape string for HTML (prevents XSS).
 * @return Result with escaped string (caller must free).
 */
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
/**
 * @brief Escape string for JavaScript string literals.
 * @return Result with escaped string (caller must free).
 */
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePath - Filesystem traversal prevention (2 functions)
 * ============================================================================ */

/**
 * @brief Check if path contains directory traversal sequences ("..").
 * @return Result with traversal detection status (true = traversal detected).
 */
ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
/**
 * @brief Sanitize a filename by removing dangerous characters.
 * @return Result with sanitized filename (caller must free).
 */
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeCrypto - Cryptographic primitives (2 functions)
 * ============================================================================ */

/**
 * @brief Constant-time byte comparison (timing-attack safe).
 * @param ptr1 First buffer.
 * @param len1 Length of first buffer.
 * @param ptr2 Second buffer.
 * @param len2 Length of second buffer.
 * @return Result with comparison status. Returns false if lengths differ.
 */
ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
/**
 * @brief Fill buffer with cryptographically secure random bytes.
 * @param ptr Buffer to fill.
 * @param len Number of bytes to generate.
 * @return Status code.
 */
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeUrl - URL parsing and validation (2 functions)
 * ============================================================================ */

/** @brief URL components structure returned by proven_url_parse(). */
typedef struct {
    char*    scheme;       size_t scheme_len;
    char*    host;         size_t host_len;
    uint16_t port;         bool   has_port;
    char*    path;         size_t path_len;
    char*    query;        size_t query_len;
    char*    fragment;     size_t fragment_len;
} ProvenUrlComponents;
/** @brief Result for URL parsing. */
typedef struct {
    int32_t             status;
    ProvenUrlComponents components;
} ProvenUrlResult;
/**
 * @brief Parse a URL into components.
 * @return Result with URL components (caller must free with proven_url_free).
 */
ProvenUrlResult proven_url_parse(const uint8_t* ptr, size_t len);
/**
 * @brief Free URL components allocated by proven_url_parse().
 * @param components Pointer to URL components to free.
 */
void proven_url_free(ProvenUrlComponents* components);
/* ============================================================================
 * SafeEmail - Email validation (1 function)
 * ============================================================================ */

/**
 * @brief Validate email address (RFC 5321 simplified).
 * @return Result with validation status.
 */
ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeUUID - UUID generation and validation (5 functions)
 * ============================================================================ */

/** @brief UUID structure (128-bit identifier). */
typedef struct { uint8_t bytes[16]; } ProvenUUID;
/* ============================================================================
 * SafeDateTime - ISO 8601 date/time handling (4 functions)
 * ============================================================================ */

/** @brief DateTime components. */
typedef struct {
    int32_t  year;
    uint8_t  month;              /**< 1-12 */
    uint8_t  day;                /**< 1-31 */
    uint8_t  hour;               /**< 0-23 */
    uint8_t  minute;             /**< 0-59 */
    uint8_t  second;             /**< 0-59 */
    uint32_t nanosecond;
    int16_t  tz_offset_minutes;  /**< 0 for UTC, negative for west of UTC */
} ProvenDateTime;