bindings/fsharp/Proven.fs

// SPDX-License-Identifier: PMPL-1.0-or-later
// Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>


/// Proven FFI bindings for F# - thin P/Invoke wrappers over libproven.
///
/// ALL computation is performed in verified Idris 2 code via the Zig FFI
/// bridge. This module contains ONLY marshaling logic. Do NOT reimplement
/// any algorithms here.
///
/// Memory management:
///   - StringResult values must be freed with proven_free_string
///   - Opaque pointer types have matching *_free functions
///   - Integer, boolean, and float results do not require freeing
namespace Proven

open System
open System.Runtime.InteropServices
open System.Text

// ============================================================================
// Status Codes
// ============================================================================

/// Status codes returned by Proven FFI operations.
/// Zero indicates success; negative values indicate specific error conditions.
type ProvenStatus =
    | Ok = 0
    | ErrNullPointer = -1
    | ErrInvalidArgument = -2
    | ErrOverflow = -3
    | ErrUnderflow = -4
    | ErrDivisionByZero = -5
    | ErrParseFailure = -6
    | ErrValidationFailed = -7
    | ErrOutOfBounds = -8
    | ErrEncodingError = -9
    | ErrAllocationFailed = -10
    | ErrNotImplemented = -99

// ============================================================================
// Core Result Structs (match C ABI layout)
// ============================================================================

/// Result for integer operations.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type IntResult =
    val mutable Status: int
    val mutable Value: int64

/// Result for boolean operations.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type BoolResult =
    val mutable Status: int
    val mutable Value: byte // bool in C ABI is 1 byte

/// Result for string operations. Caller must free Value with proven_free_string.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type StringResult =
    val mutable Status: int
    val mutable Value: nativeint
    val mutable Length: unativeint

/// Result for floating-point operations.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type FloatResult =
    val mutable Status: int
    val mutable Value: float

// ============================================================================
// Domain-specific Structs
// ============================================================================

/// IPv4 address (4 bytes).
[<Struct; StructLayout(LayoutKind.Sequential)>]
type IPv4Address =
    [<MarshalAs(UnmanagedType.ByValArray, SizeConst = 4)>]
    val mutable Octets: byte array

/// Result for IPv4 parsing.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type IPv4Result =
    val mutable Status: int
    val mutable Address: IPv4Address

/// UUID (16 bytes).
[<Struct; StructLayout(LayoutKind.Sequential)>]
type ProvenUUID =
    [<MarshalAs(UnmanagedType.ByValArray, SizeConst = 16)>]
    val mutable Bytes: byte array

/// UUID result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type UUIDResult =
    val mutable Status: int
    val mutable UUID: ProvenUUID

/// Currency result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type CurrencyResult =
    val mutable Status: int
    val mutable AmountMinor: int64
    [<MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)>]
    val mutable CurrencyCode: byte array
    val mutable DecimalPlaces: byte

/// Phone result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type PhoneResult =
    val mutable Status: int
    val mutable CountryCode: uint16
    val mutable NationalNumber: uint64
    val mutable IsValid: byte

/// DateTime components.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type ProvenDateTime =
    val mutable Year: int32
    val mutable Month: byte
    val mutable Day: byte
    val mutable Hour: byte
    val mutable Minute: byte
    val mutable Second: byte
    val mutable Nanosecond: uint32
    val mutable TzOffsetMinutes: int16

/// DateTime result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type DateTimeResult =
    val mutable Status: int
    val mutable DateTime: ProvenDateTime

/// Semantic version.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type SemanticVersion =
    val mutable Major: uint32
    val mutable Minor: uint32
    val mutable Patch: uint32
    val mutable PrereleaseLen: unativeint
    val mutable Prerelease: nativeint

/// Version result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type VersionResult =
    val mutable Status: int
    val mutable Version: SemanticVersion

/// Geographic coordinate.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type GeoCoordinate =
    val mutable Latitude: float
    val mutable Longitude: float

/// Geo result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type GeoResult =
    val mutable Status: int
    val mutable Coordinate: GeoCoordinate

/// Password strength level.
type PasswordStrength =
    | VeryWeak = 0
    | Weak = 1
    | Fair = 2
    | Strong = 3
    | VeryStrong = 4

/// Password validation result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type PasswordResult =
    val mutable Strength: int
    val mutable HasLowercase: byte
    val mutable HasUppercase: byte
    val mutable HasDigit: byte
    val mutable HasSpecial: byte
    val mutable Length: unativeint

/// Hex decode result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type HexDecodeResult =
    val mutable Status: int
    val mutable Data: nativeint
    val mutable Length: unativeint

/// RGB color.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type RGBColor =
    val mutable R: byte
    val mutable G: byte
    val mutable B: byte

/// HSL color.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type HSLColor =
    val mutable H: float
    val mutable S: float
    val mutable L: float

/// Color parse result.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type ColorParseResult =
    val mutable Status: int
    val mutable Color: RGBColor

/// Retry configuration.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type RetryConfig =
    val mutable MaxAttempts: uint32
    val mutable BaseDelayMs: uint64
    val mutable MaxDelayMs: uint64
    val mutable Multiplier: float

/// Circuit breaker state.
type CircuitState =
    | Closed = 0
    | Open = 1
    | HalfOpen = 2

/// SameSite attribute.
type SameSite =
    | Strict = 0
    | Lax = 1
    | None = 2

/// Charset encoding.
type Charset =
    | Utf8 = 0
    | Utf16LE = 1
    | Utf16BE = 2
    | Iso8859_1 = 3
    | Ascii = 4
    | Windows1252 = 5
    | Other = 6

/// Length unit.
type LengthUnit =
    | Meters = 0
    | Kilometers = 1
    | Centimeters = 2
    | Millimeters = 3
    | Feet = 4
    | Inches = 5
    | Miles = 6
    | Yards = 7

/// Temperature unit.
type TempUnit =
    | Celsius = 0
    | Fahrenheit = 1
    | Kelvin = 2

/// JSON value type.
type JsonType =
    | Null = 0
    | Bool = 1
    | Number = 2
    | String = 3
    | Array = 4
    | Object = 5
    | Invalid = -1

/// Cookie attributes for building Set-Cookie headers.
[<Struct; StructLayout(LayoutKind.Sequential)>]
type CookieAttributes =
    val mutable Domain: nativeint
    val mutable DomainLen: unativeint
    val mutable Path: nativeint
    val mutable PathLen: unativeint
    val mutable MaxAge: int64
    val mutable Secure: byte
    val mutable HttpOnly: byte
    val mutable SameSite: int
    val mutable Partitioned: byte

// ============================================================================
// Raw P/Invoke Declarations - ALL 103 exported functions from libproven
// ============================================================================

/// Low-level P/Invoke bindings to libproven. These should not be called
/// directly; use the safe wrapper modules below instead.
module FFI =

    // --- Memory Management (1) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_free_string(nativeint ptr)

    // --- Lifecycle (3) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_init()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_deinit()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern bool proven_is_initialized()

    // --- Version Information (5) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_ffi_abi_version()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_version_major()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_version_minor()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_version_patch()

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern uint32 proven_module_count()

    // --- SafeMath (8) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_div(int64 numerator, int64 denominator)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_mod(int64 numerator, int64 denominator)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_add_checked(int64 a, int64 b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_sub_checked(int64 a, int64 b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_mul_checked(int64 a, int64 b)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_abs_safe(int64 n)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int64 proven_math_clamp(int64 lo, int64 hi, int64 value)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern IntResult proven_math_pow_checked(int64 base_, uint32 exp)

    // --- SafeString (4) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_string_is_valid_utf8(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_string_escape_sql(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_string_escape_html(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_string_escape_js(byte[] ptr, unativeint len)

    // --- SafePath (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_path_has_traversal(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern StringResult proven_path_sanitize_filename(byte[] ptr, unativeint len)

    // --- SafeCrypto (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_crypto_constant_time_eq(byte[] ptr1, unativeint len1, byte[] ptr2, unativeint len2)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern int proven_crypto_random_bytes(byte[] ptr, unativeint len)

    // --- SafeUrl (2) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern nativeint proven_url_parse(byte[] ptr, unativeint len)

    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern void proven_url_free(nativeint components)

    // --- SafeEmail (1) ---
    [<DllImport("proven", CallingConvention = CallingConvention.Cdecl)>]
    extern BoolResult proven_email_is_valid(byte[] ptr, unativeint len)
